--- a/rules/keycloak_rules.yaml
+++ b/rules/keycloak_rules.yaml
@@ -1,7 +1,5 @@
-- rule: Keycloak event received
-  desc: Received keycloak event
-  condition: keycloak.admin.resourceType=USER
-  output: id=%keycloak.eventID error=%keycloak.error realmID=%keycloak.realmID
-  priority: WARNING
-  source: keycloak
-  tags: [keycloak]
+- macro: kc_adm_evt
+  condition: (keycloak.admin.resourceType exists and keycloak.admin.resourceType != "")
+
+- macro: kc_usr_evt
+  condition: (keycloak.user.eventType exists and keycloak.user.eventType != "")
