--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,13 +18,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Falcoctl Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: falcosecurity/falcoctl
-          ref: 0.9.1 # adapt to the latest version
+          ref: v0.9.1 # adapt to the latest version
           path: tools/falcoctl
       - name: Setup Golang
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '^1.22'
           cache-dependency-path: tools/falcoctl/go.sum
@@ -32,7 +32,7 @@ jobs:
         run: make
         working-directory: tools/falcoctl
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: plugin
       - name: Build the plugin
@@ -78,15 +78,15 @@ jobs:
     runs-on: ubuntu-latest[0-9]+\.[0-9]+\.[0-9]+
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Setup Golang
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
           go-version: '1.22'
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v4
+        uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
           args: release --clean --timeout 120m
